# simple-object-rec

./: .gitignore  OD.py  OD_async.py  OD_async_no_enhancement.py  OD_with_model_switching.py  README.md  aerialTests.py  detect_tents_mannequins.py  improvements.md  requirements.txt  robust_logged_detection.py  run_detection.py  run_object_detection.py
logs/: robust_detections_20251007_231959.jsonl  robust_detections_20251012_183409.jsonl  robust_detections_20251012_183528.jsonl
ros2_object_detection/: package.xml  setup.py
ros2_object_detection/config/: high_performance.yaml  object_detection_params.yaml
ros2_object_detection/launch/: object_detection.launch.py  object_detection_with_camera.launch.py
ros2_object_detection/ros2_object_detection/: __init__.py  camera_publisher.py  detection_methods.py  object_detection_node.py
ros2_ws/: README.md  run_detection.sh  setup_workspace.sh
ros2_ws/src/ros2_object_detection/: README.md
ros2_ws/src/ros2_object_detection/config/: high_accuracy.yaml
ros2_ws/src/ros2_object_detection/scripts/: test_detection.py
